assets/css/style.css
@font-face {
  font-family: "Agustina";
  src: url(../fonts/Agustina.woff);
  font-display: swap;
}


/*CSS variable declaration for light/dark mode*/

html[data-theme="light"] {
  --bg-mybtn: red;
  --bg-nav: black;
  --bg-nav-img: black;
  --bg-footer: #DDE1EC;
  --bg: #ffffff;
  --text: #191919;
  --text-color: #6c757d;
  --col-icon: black;
  --col-bd-radius: rgb(2, 2, 2);
  --col-box-shadow: #000000 2px 2px 4px, #4D4D4D -2px -2px 4px;
  --col-box-shadow-hover: inset #8a7373 2px 2px 4px, inset #4D4D4D -2px -2px 4px;
  --col-bd-icon: transparent;
  --bg-icon: #fff;
  --col-icon-twitter: #1da1f2;
  --col-icon-dribbble: #ea4c89;
  --col-icon-linkedin: #0e76a8;
  --col-icon-kaggle: #41aff3;
  --col-icon-github: #24292e;
  --col-icon-instagram: rgb(201, 94, 174);
  --col-icon-mail: rgb(209, 82, 82);
  --col-icon-google-scholar: #3cba54;
  --col-icon-codeforces: rgb(19, 145, 184);
  --col-icon-leetcode: rgb(255, 181, 62);
  --shadow-col: rgba(0, 0, 0, 0.3);
}

html[data-theme="dark"] {
  --bg-mybtn: rgb(230, 109, 129);
  --bg-nav: #1a1a2e;
  --bg-nav-img: linear-gradient(315deg, #1a1a2e 0%, #16213e 74%);
  --bg-footer: linear-gradient(315deg, #6617cb 0%, #882463 74%);
  --bg: #191919;
  --text: #ffffff;
  --text-color: #fff;
  --bg-txt-img: linear-gradient(315deg, #d5adc8 0%, #ff8489 74%);
  --txt-fill: transparent;
  --col-icon: white;
  --col-bd-radius: black;
  --col-bd-icon: transparent;
  --col-box-shadow: 5px 5px 10px rgba(22, 21, 21, 0.7), -5px -5px 10px rgba(255, 255, 255, 0.1);
  --col-box-shadow-hover: inset rgba(255, 255, 255, 1) 2px 2px 4px, inset rgba(255, 255, 255, 0.5) -2px -2px 4px;
  --col-icon-twitter: #1da1f2;
  --col-icon-dribbble: #ea4c89;
  --col-icon-linkedin: #0e76a8;
  --col-icon-kaggle: #41aff3;
  --col-icon-github: #24292e;
  --col-icon-instagram: rgb(201, 94, 174);
  --col-icon-mail: rgb(209, 82, 82);
  --col-icon-google-scholar: #3cba54;
  --col-icon-codeforces: rgb(19, 145, 184);
  --col-icon-leetcode: rgb(255, 181, 62);
  --col-white: #fff;
}


/*
---------------------------
      SCROLLBAR
---------------------------
*/

::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px #bb86fc;
  border-radius: 2px;
  background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
  border-radius: 2px;
  max-height: 10px;
  -webkit-box-shadow: inset 0 0 6px #bb86fc;
  background: #bb86fc;
  transition: 0.3s;
}

::-webkit-scrollbar-thumb:hover {
  background: #ca9eff;
  
}

/* Custom Scrollbar for Mozilla Firefox*/
html{
  overflow-y: visible;
  scrollbar-color: #ca9eff #f1f1f1;
  scrollbar-width: auto;
}

body {
  height: 100vh;
  margin: 0;
  overflow-x: hidden;
  color: var(--text);
  font-family: "Poppins", sans-serif;
  background-color: var(--bg);
}
.text-center heading1 exp-head {
  color: white;
}


/* Scroll to Top button */

#btnScrollToTop {
  width: 50px;
  height: 50px;
  background-color: #bb86fc;
  color: #fff;
  margin: 8px;
  border: none;
  border-radius: 50%;
  box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.3);
  text-decoration: none;
  position: fixed;
  outline: none;
  bottom: 10px;
  right: 10px;
  animation: up 1.5s infinite;
  -webkit-animation: up 1.5s infinite;
}


/*
---------------------------------------
 SCROLL TO TOP BUTTON MICROANIMATION
---------------------------------------
*/

@keyframes up {
  0% {
      transform: translate(0);
  }
  20% {
      transform: translateY(-15px);
  }
  40% {
      transform: translate(0);
  }
}

@-webkit-keyframes up {
  0% {
      transform: translate(0);
  }
  20% {
      transform: translateY(-15px);
  }
  40% {
      transform: translate(0);
  }
}


/* smooth scrolling to top */

html {
  scroll-behavior: smooth;
}


/*
------------------------------------
   HAMBURGER ANIMATION
------------------------------------
*/

.hamburger_wrapper {
  float: right;
}

.hamburger {
  width: 2.5em;
  height: 2em;
  font-size: 11px;
  cursor: pointer;
  position: relative;
}

.first,
.second,
.third {
  position: absolute;
  background-color: rgba(0, 0, 0, 0.85);
  height: .45em;
  width: 100%;
  float: left;
  border-radius: 2px;
  transition: all .35s ease-in-out;
}

.first {
  top: 0px;
}

.is-active .first {
  transform-origin: .167em .33em;
  transform: rotate(45deg) translate(0.167em, -0.25em);
}

.second {
  top: 50%;
  margin-top: -.25em;
}

.is-active .second {
  opacity: 0;
  transform: translateX(8em)
}

.third {
  bottom: 0px;
  transform-origin: .25em -0.33em;
}

.is-active .third {
  transform: rotate(-45deg) translate(-0.167em, 0.083em);
}

.navbar-brand {
  font-family: Agustina;
  font-size: 30px;
  font-weight: bold;
}

.navbar {
  color: #000000;
  background-color: #fff;
  z-index: 2;
  box-shadow: 0 2px 2px rgb(230, 230, 230);
}

/* Dark Mode toggle switch button */
.dark_toggler {
  background-color: #e8e0ff;
  background-image: none;
  position: relative;
  -webkit-appearance: none;
  cursor: pointer;
  width: 100px;
  height: 40px;
  border-radius: 50px;
  outline: none;
  transition: background-color 0.9s;
  box-shadow: 0px 2px 5px 1px gray;
}

.dark_toggler:checked {
  background-color: #2d1b4e;
  background-image: none;
}

.dark_toggler::after {
  content: "☀️";
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-50%);
  font-size: 16px;
}

.dark_toggler:checked::after {
  content: "🌙";
  left: 8px;
  right: auto;
}

html {
  background-color: #f6f6f6;
  transition: background-color .3s;
}

html[light-mode="dark"] {
  background-color: #141516;
  color: #ced4e2;
}

.dark-theme {
  background-color: #2b2a2A;
  transition: background-color .3s;
  box-shadow: 0 0 0;
}

.dark-theme .navbar-nav .nav-link,
.dark-theme .navbar-brand {
  color: rgba(255, 255, 255, 0.5);
}

.dark-theme .nav-link:hover{
color: #ffffff !important;
}

.dark-theme .first,
.dark-theme .second,
.dark-theme .third {
  background-color: rgba(255, 255, 255, 0.5);
}
/* ... */

